...
        </TableLayout>
    </androidx.core.widget.NestedScrollView>



    <Button
        android:id="@+id/AddRoundButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:text="@string/add_round"
        android:onClick="addRound"
...
